[package]
name = "lachs"
version = "0.1.3"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "MIT"
readme = "README.md"
description = "Crate for automatically creating a lexer based on a given enum"
repository = "https://github.com/H1ghBre4k3r/lachs"
documentation = "https://docs.rs/lachs"

[dependencies]
colored = "3.0.0"
lachs_derive = { version = "0.1.1", path = "../lachs_derive/" }
regex = "1.11.1"
